[package]
name = "zestor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
clap = { version = "4.5.11", features = ["derive"] }
clap_derive = "4.5.13"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
